--- a/app/assets/stylesheets/layouts/_main.scss
+++ b/app/assets/stylesheets/layouts/_main.scss
@@ -1,4 +1,5 @@
 .page-wrapper {
   min-height: calc(100vh - 150px);
   // padding-bottom: 20px;
+  padding-top: 65px;
 }
